# vr_school

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/api/: exceptions.py  mixins.py  paginations.py  permissions.py  urls.py  utils.py
backend/config/: settings.py  urls.py
backend/locale/ru/LC_MESSAGES/: django.po
backend/scripts/: start-dev.sh  start-prod.sh
backend/templates/email/: password_reset.html
backend/users/: admin.py  email.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: Dockerfile  middleware.js  package-lock.json  package.json
frontend/app/: Home.module.css  layout.js  page.js
frontend/app/components/Footer/: Footer.jsx  Footer.module.css
frontend/app/components/Header/: Header.jsx
frontend/lib/: fonts.js
infra/: nginx.conf
